added/ modified descriptions
Added command for adding slave nodes and updated section titles.

--- a/PHASE-1/2. K8-Setup.md
+++ b/PHASE-1/2. K8-Setup.md
@@ -44,6 +44,7 @@ sudo apt install -y kubeadm=1.28.1-1.1 kubelet=1.28.1-1.1 kubectl=1.28.1-1.1
 ```bash
 sudo kubeadm init --pod-network-cidr=10.244.0.0/16
 ```
+Gives one command to add slave nodes to master cluster k8s. This command can be used t add any new slaves/ worker nodes to master k8s cluster 
 
 ### 8. Configure Kubernetes Cluster [On MasterNode]
 
@@ -64,9 +65,16 @@ kubectl apply -f https://docs.projectcalico.org/manifests/calico.yaml
 ```bash
 kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v0.49.0/deploy/static/provider/baremetal/deploy.yaml
 ```
-**###Running Kubeaudit to scan the kubernetes cluster for any vulnerabilities**
+### 11. Running Kubeaudit to scan the kubernetes cluster for any vulnerabilities
 
+```bash
 https://github.com/Shopify/kubeaudit/releases
+-select the tar file you want to use - copy link
+wget <copy that link>
+
 tar -xvzf kubeaudit_0.22.2_windows_amd64.tar.gz
+check the file name to extract if error.
+
 sudo mv kubeaudit /usr/local/bin
 kubeaudit all
+```
