modified last step instructions
Updated instructions for running Kubeaudit, including downloading and extracting the tar file.

--- a/PHASE-1/2. K8-Setup.md
+++ b/PHASE-1/2. K8-Setup.md
@@ -69,12 +69,17 @@ kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/cont
 
 ```bash
 https://github.com/Shopify/kubeaudit/releases
--select the tar file you want to use - copy link
+```
+Select the tar file you want to use - copy link
+```bash
 wget <copy that link>
+```
 
+Extract the file - (check the file name to extract if error.)
+```bash
 tar -xvzf kubeaudit_0.22.2_windows_amd64.tar.gz
-check the file name to extract if error.
-
+```
+```bash
 sudo mv kubeaudit /usr/local/bin
 kubeaudit all
 ```
